--- a/Biblioteca/css/categorias.css
+++ b/Biblioteca/css/categorias.css
@@ -118,11 +118,11 @@ a:hover {
 }
 
 .container {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    gap: 30px;
     justify-items: center;
     align-items: center;
-    list-style-type: none;
-    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -172,8 +172,21 @@ footer {
 
 /* Responsivo */
 
-@media screen and (max-width:1120px) {
+@media screen and (max-width:1400px) {
     .container {
-        flex-wrap: wrap;
+        grid-template-columns: auto auto auto;
     }
 }
+
+@media screen and (max-width:850px) {
+    .container {
+        grid-template-columns: auto auto;
+    }
+}
+
+@media screen and (max-width:450px) {
+    .container {
+        grid-template-columns: auto;
+    }
+}
+
