--- a/Biblioteca/css/home.css
+++ b/Biblioteca/css/home.css
@@ -6,8 +6,9 @@
 }
 
 body {
-   background: #4d2c20;
+    background: #4d2c20;
 }
+
 #tituloprincipal {
     padding: 20px;
     margin: 10px;
@@ -48,12 +49,34 @@ nav {
     margin-top: 30px;
 }
 
+h2 {
+    margin-bottom: 20px;
+    font-size: 2em;
+    font-family: 'Vina Sans', cursive;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+.vermais {
+    display: flex;
+    justify-items: center;
+}
+
+.container-livros {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-items: center;
+
+}
+
 section {
     text-align: center;
     padding: 3em;
     margin: auto;
-    font-size: 2em;
-    line-height: 3em;
+    font-size: 1.17em;
     color: rgb(147, 179, 243);
     font-family: 'Lobster', cursive;
     font-family: 'Playfair Display', serif;
@@ -67,24 +90,34 @@ footer {
     text-align: center;
     padding: 20px 0px;
     font-size: 0.9rem;
-    color:#4d2c20;
+    color: #4d2c20;
     font-weight: 800;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
-.imagens{
-    width:100%; 
+
+.imagens {
+    width: 100%;
     height: 250px;
 }
-.container{
+
+.container {
     padding: 20px;
-    height:auto;
+    height: auto;
     display: flex;
-    align-items: start ;
+    align-items: center;
     align-self: center;
-    overflow:hidden;
+    overflow: hidden;
+    flex-direction: column;
+
 }
-.container .livros{
+
+.container .livros {
+    display: flex;
+    flex-direction: column;
     margin: 15px;
-    border: solid 1px ;
+    border: solid 1px;
     background-color: #6a3d2c;
     margin: 4px;
     width: 200px;
@@ -92,18 +125,47 @@ footer {
     padding: 20px;
     align-self: center;
 }
+
+button {
+    background-color: #a19587;
+    border: none;
+    color: black;
+    padding: 8px;
+    display: flex;
+    font-size: 16px;
+    margin: 10px;
+}
+
+.div-buttons {
+    margin-top: auto;
+    /* adiciona margem superior automática para fixar a div de botões no final */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .bemvindos p {
     background-color: #6a3d2c;
     font-size: 1.1rem;
     padding: 20px;
     text-align: justify;
     font-weight: 600;
+    
 }
-#artigo{
+
+#artigo {
     border: solid 1px;
     padding: 20px;
-    align-self:self-start;
+    align-self: self-start;
 }
 
-
-
+footer {
+    border-top: 10px solid #6a3d2c;
+    background-color: #ffc2a2;
+    text-align: center;
+    padding: 20px 0px;
+    font-size: 0.9rem;
+    color:#4d2c20;
+    font-weight: 800;
+    
+}
