--- a/Biblioteca/css/home.css
+++ b/Biblioteca/css/home.css
@@ -3,19 +3,18 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
-    padding-bottom: 50px;
     background: #4d2c20;
-    font-family: Arial, sans-serif;
-    overflow-x: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #tituloprincipal {
     padding: 20px;
     margin: 10px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-size: 5rem;
 }
@@ -75,7 +74,7 @@ article {
     flex-direction: row;
     flex-wrap: wrap;
     justify-items: center;
-    justify-content: center;
+
 }
 
 section {
@@ -84,7 +83,7 @@ section {
     margin: auto;
     font-size: 1.17em;
     color: rgb(147, 179, 243);
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: 3em;
 }
 
@@ -96,7 +95,7 @@ footer {
     font-size: 0.9rem;
     color: #4d2c20;
     font-weight: 800;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
@@ -154,7 +153,7 @@ button {
     padding: 20px;
     text-align: justify;
     font-weight: 600;
-    
+
 }
 
 #artigo {
@@ -169,7 +168,14 @@ footer {
     text-align: center;
     padding: 20px 0px;
     font-size: 0.9rem;
-    color:#4d2c20;
+    color: #4d2c20;
     font-weight: 800;
-    
+}
+
+/* Responsivo */
+
+@media screen and (max-width:1120px) {
+    .container {
+        flex-wrap: wrap;
+    }
 }
