--- a/Biblioteca/css/sobre.css
+++ b/Biblioteca/css/sobre.css
@@ -1,7 +1,11 @@
+@charset "utf-8";
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
+
 nav {
     display: flex;
     align-items: center;
@@ -34,49 +38,92 @@ nav {
 }
 
 footer {
-    display: flex;
-    justify-content: center;
     border-top: 10px solid #6a3d2c;
     background-color: #ffc2a2;
+    text-align: center;
     padding: 20px 0px;
     font-size: 0.9rem;
     color: #4d2c20;
     font-weight: 800;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
 }
 
-footer p {
-    color: #4d2c20;
-}
-
-body{
+body {
     background-color: #4d2c20;
     font-family: Arial, sans-serif;
+    color: black;
 }
 
 section {
-    margin: 5px;
-    padding: 10px 100px;
-    text-align: justify;
+    padding: 15px 20px;
 }
 
-article {
-    padding: 10px 100px;
-    text-align: justify;
-}
-
-h1{
+.titulo {
     text-align: center;
-    color: #000000;
+    padding: 15px 0px;
+    margin-bottom: 10px;
 }
 
-p{
-    color: #d5ccc7;
+.descricao {
+    padding: 15px 20px;
     text-align: justify;
+    background-color: #6a3d2c;
+    list-style-type: none;
+    font-weight: 800;
 }
 
-li{
-    color: #d5ccc7;
+.container {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    list-style-type: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: #6a3d2c;
+    padding: 20px 0px;
+}
+
+.containerColaboradores {
+    display: flex;
+    flex-direction: column;
+    background-color: #4d2c20;
+    margin: 4px;
+    width: 100px;
+    height: 100px;
+    padding: 20px;
+    text-align: center;
+    align-items: center;
+}
+
+footer {
+    border-top: 10px solid #6a3d2c;
+    background-color: #ffc2a2;
+    text-align: center;
+    padding: 20px 0px;
+    font-size: 0.9rem;
+    color: #4d2c20;
+    font-weight: 800;
+    margin-top: 30px;
+}
+
+.botao-github {
+    display: inline-block;
+    background-color: #333;
+    color: #fff;
+    margin-top: 10px;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 18px;
+}
+
+.botao-github:hover {
+    background-color: #555;
+}
+
+/* Responsivo */
+
+@media screen and (max-width:1120px) {
+    .container {
+        flex-wrap: wrap;
+    }
 }
